# apps/api/openapi.yaml
@@ -63,7 +63,7 @@ components:
       required:
         - status
       type: object
-    Portfolio:
+    AppData:
       additionalProperties: false
       properties:
         pricing:
@@ -171,10 +171,10 @@ info:
   version: 0.1.0
 openapi: 3.1.0
 paths:
-  /api/portfolio:
+  /api/app-data:
     get:
       description: Returns the projects and the pricing plan associated with the authenticated user.
-      operationId: get-portfolio
+      operationId: get-app-data
       parameters:
         - description: Pre-shared referral code
           in: header
@@ -188,7 +188,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Portfolio"
+                $ref: "#/components/schemas/AppData"
           description: OK
         default:
           content:
@@ -198,7 +198,7 @@ paths:
           description: Error
       security:
         - referralCode: []
-      summary: Aggregate portfolio data
+      summary: Aggregate app data
   /healthz:
     get:
       operationId: healthz
